Add main models and define IDominoChainSolver solve method

--- a/PipsAndStones/PipsAndStones.CLI/PipsAndStones.CLI.csproj
+++ b/PipsAndStones/PipsAndStones.CLI/PipsAndStones.CLI.csproj
@@ -9,8 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Interfaces\" />
-      <Folder Include="Services\" />
+      <ProjectReference Include="..\PipsAndStones.LIB\PipsAndStones.LIB.csproj" />
     </ItemGroup>
 
 </Project>
