Implement interface and add DominoNode

--- a/PipsAndStones/PipsAndStones.Logic/PipsAndStones.Logic.csproj
+++ b/PipsAndStones/PipsAndStones.Logic/PipsAndStones.Logic.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\PipsAndStones.LIB\PipsAndStones.LIB.csproj" />
+    </ItemGroup>
+
 </Project>
