--- a/PipsAndStones/PipsAndStones.CLI/PipsAndStones.CLI.csproj
+++ b/PipsAndStones/PipsAndStones.CLI/PipsAndStones.CLI.csproj
@@ -10,6 +10,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\PipsAndStones.LIB\PipsAndStones.LIB.csproj" />
+      <ProjectReference Include="..\PipsAndStones.Logic\PipsAndStones.Logic.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
